[c] Set up circle CI and coveralls

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "test:cov": "jest --coverage"
+    "test:cov": "jest --coverage && coveralls < coverage/lcov.info"
   },
   "author": "",
   "license": "ISC",
